bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type Bool
var fini:Bool = False
         ^BDR:1: error: not found: value False
var fini:Bool = False
                ^